Cambio index desde dreamweaver

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	
+<h1 style="color:#1BA681"> WEB S08 IDAT desde dreamweaver </h1>
 
-<H1> WEB S08 IDAT </H1>
-
-<H2> Andres Reategui </H2>
+<h2 style="color:#1538AA"> Andres Reategui </h2>
 
 <a href="ejemplo 1.html">Enlace</a>
+</body>
+</html>
